feat: 검색 API 파라미터 수정 및 쿼리 최적화 - 타입별로 조회 가능하도록 수정